Updates, más íconos y fotos agregadas

--- a/cinema/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/cinema/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,8 @@
     <item
         android:id="@+id/navigation_inicio"
         android:icon="@drawable/inicio_off_36x36"
-        android:title="@string/title_inicio" />
+        android:title="@string/title_inicio"
+        />
 
     <item
         android:id="@+id/navigation_cartelera"
