--- a/cinema/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/cinema/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -13,7 +13,8 @@
         android:layout_height="147dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"
-        android:src="@mipmap/ic_banner"
+        android:src="@drawable/logoreel"
+        android:padding="30dp"
         tools:ignore="MissingConstraints" />
 
     <TextView
