--- a/cinema/app/src/main/res/layout/activity_registrarse.xml
+++ b/cinema/app/src/main/res/layout/activity_registrarse.xml
@@ -22,11 +22,12 @@
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="wrap_content"
-        android:layout_height="110dp"
+        android:layout_width="410dp"
+        android:layout_height="147dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@drawable/logoreel"
+        android:padding="30dp"/>
 
     <ImageView
         android:id="@+id/imageView10"
