--- a/cinema/app/src/main/res/layout/fragment_cines.xml
+++ b/cinema/app/src/main/res/layout/fragment_cines.xml
@@ -33,31 +33,43 @@
         android:columnCount="3"
         android:rowCount="1"
         android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ubicacion_36x36" />
+
         <Button
             android:id="@+id/btn_cineEscogido"
             android:layout_width="180dp"
             android:layout_height="60dp"
             android:layout_column="0"
             android:text="Cine Obregón"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/editTextGray"
+            android:textColor="@color/almostwhite"/>
 
-        <Button
-            android:id="@+id/btn_filter"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_column="1"
-            android:layout_gravity="right"
-            android:layout_marginHorizontal="7dp"
-            android:text="Search"
-            android:textSize="6sp"/>
+        <ImageButton
+            android:id="@+id/buscar"
+            android:layout_width="38dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="29dp"
+            android:background="@color/Banner"
+            android:src="@drawable/busqueda_36x36"
+            />
 
-        <Button
-            android:id="@+id/btn_search"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_column="2"
-            android:text="Filter"
-            android:textSize="6sp"/>
+        <ImageButton
+            android:id="@+id/imagen"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="15dp"
+            android:background="@color/Banner"
+            android:src="@drawable/filtros_36x36"
+            />
     </GridLayout>
     <ScrollView
         android:layout_width="match_parent"
