--- a/cinema/app/src/main/res/layout/fragment_inicio.xml
+++ b/cinema/app/src/main/res/layout/fragment_inicio.xml
@@ -11,23 +11,26 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="168dp"
+        android:layout_width="410dp"
         android:layout_height="80dp"
+        android:padding="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/inicio_on_192x192" />
+        app:srcCompat="@drawable/logoreel" />
 
     <Button
         android:layout_width="232dp"
         android:layout_height="43dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/roundedbutton"
         android:backgroundTint="@color/Fondo"
         android:text="Ciudad Obregon Sonora, mex"
         android:textFontWeight="400"
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -35,23 +38,21 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="144dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        tools:layout_editor_absoluteX="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:gravity="center"
-            >
+            android:orientation="vertical">
 
             <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                 android:id="@+id/carouselRecyclerview"
                 android:layout_width="411dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="50dp"
-                android:layout_marginTop="60dp"
+                android:layout_margin="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
@@ -60,12 +61,12 @@
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
-                android:textSize="25dp"
-                android:textFontWeight="600"
-                android:textColor="@color/white"
-                android:padding="10dp"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:text="Promociones cerca de ti"
+                android:textColor="@color/white"
+                android:textFontWeight="600"
+                android:textSize="25dp"
                 tools:layout_editor_absoluteX="69dp"
                 tools:layout_editor_absoluteY="94dp" />
 
@@ -95,7 +96,6 @@
                 android:layout_height="164dp"
                 android:padding="10dp"
                 app:srcCompat="@drawable/precioespecial3" />
-
 
 
         </LinearLayout>
