--- a/cinema/app/src/main/res/layout/fragment_perfil.xml
+++ b/cinema/app/src/main/res/layout/fragment_perfil.xml
@@ -16,16 +16,17 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:paddingTop="10dp"
-            android:src="@drawable/inicio_on_192x192"
+            android:layout_width="190dp"
+            android:layout_height="80dp"
+            android:paddingLeft="20dp"
+
+            android:src="@drawable/logoreel"
             app:layout_constraintBottom_toBottomOf="@id/imageView2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.051"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imageView3"
