--- a/cinema/app/src/main/res/layout/fragment_perfil.xml
+++ b/cinema/app/src/main/res/layout/fragment_perfil.xml
@@ -82,6 +82,9 @@
                 android:layout_marginHorizontal="4dp"
                 android:text="Conseguir Monedas"
                 android:textSize="8sp"
+                android:background="@drawable/roundedblackbutton"
+                android:textColor="@color/almostwhite"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                 app:layout_constraintStart_toStartOf="@+id/constraintLayout"
@@ -94,6 +97,9 @@
                 android:layout_marginHorizontal="4dp"
                 android:text="Conseguir Monedas"
                 android:textSize="8sp"
+                android:background="@drawable/roundedblackbutton"
+                android:textColor="@color/almostwhite"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                 app:layout_constraintStart_toStartOf="@+id/constraintLayout"
