--- a/cinema/app/src/main/res/layout/fragment_cines.xml
+++ b/cinema/app/src/main/res/layout/fragment_cines.xml
@@ -71,7 +71,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -91,250 +91,49 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Cinépolis Bella Vista"
-                                android:textColor="@color/white"
-                                android:layout_column="0"
-                                android:layout_row="0"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
                                 android:text="Dirección"
                                 android:textColor="@color/white"
                                 android:layout_column="0"
-                                android:layout_row="1"/>
+                                android:layout_row="0"/>
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Tipo de Sala"
                                 android:textColor="@color/white"
                                 android:layout_column="0"
+                                android:layout_row="1"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Cinépolis Bella Vista"
+                                android:textColor="@color/white"
+                                android:layout_column="0"
                                 android:layout_row="2"/>
-                            <ImageButton
-                                android:layout_width="150dp"
-                                android:layout_height="match_parent"
+
+                            <RatingBar
+                                android:id="@+id/ratingbar"
+                                android:layout_width="129dp"
+                                android:layout_height="31dp"
                                 android:layout_row="3"
                                 android:layout_column="0"
-                                android:layout_marginHorizontal="6dp"
+                                android:layout_gravity="left"
+                                android:numStars="5"
+                                android:progressTint="@color/yellow"
+                                android:scaleX="0.5"
+                                android:scaleY="0.5"
                                 />
+
                             <ImageButton
-                                android:layout_width="150dp"
-                                android:layout_height="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:layout_row="3"
                                 android:layout_column="1"
-                                android:layout_marginHorizontal="6dp"
                                 />
                         </GridLayout>
+                        </LinearLayout>
                     </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="45dp"
-                    android:layout_marginVertical="15dp"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:background="#1459AB"/>
-                    <GridLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:rowCount="4"
-                        android:columnCount="2">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Cinépolis Bella Vista"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="0"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Dirección"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="1"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Tipo de Sala"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="2"/>
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="0"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="1"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                    </GridLayout>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="45dp"
-                    android:layout_marginVertical="15dp"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:background="#1459AB"/>
-                    <GridLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:rowCount="4"
-                        android:columnCount="2">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Cinépolis Bella Vista"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="0"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Dirección"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="1"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Tipo de Sala"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="2"/>
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="0"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="1"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                    </GridLayout>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="45dp"
-                    android:layout_marginVertical="15dp"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:background="#1459AB"/>
-                    <GridLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:rowCount="4"
-                        android:columnCount="2">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Cinépolis Bella Vista"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="0"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Dirección"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="1"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Tipo de Sala"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="2"/>
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="0"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="1"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                    </GridLayout>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="45dp"
-                    android:layout_marginVertical="15dp"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:background="#1459AB"/>
-                    <GridLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:rowCount="4"
-                        android:columnCount="2">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Cinépolis Bella Vista"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="0"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Dirección"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="1"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Tipo de Sala"
-                            android:textColor="@color/white"
-                            android:layout_column="0"
-                            android:layout_row="2"/>
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="0"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                        <ImageButton
-                            android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_row="3"
-                            android:layout_column="1"
-                            android:layout_marginHorizontal="6dp"
-                            />
-                    </GridLayout>
-                </LinearLayout>
-
-            </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
