--- a/cinema/app/src/main/res/layout/fragment_cines.xml
+++ b/cinema/app/src/main/res/layout/fragment_cines.xml
@@ -37,7 +37,7 @@
             android:src="@drawable/ubicacion_36x36" />
 
         <Button
-            android:id="@+id/btn_cineEscogido"
+            android:id="@+id/btn_ubicacion"
             android:layout_width="180dp"
             android:layout_height="60dp"
             android:layout_column="0"
