--- a/cinema/app/src/main/res/layout/activity_registrarse.xml
+++ b/cinema/app/src/main/res/layout/activity_registrarse.xml
@@ -11,23 +11,23 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textAllCaps="false"
         android:text="Regístrate"
+        android:textAllCaps="false"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/imageView5"
         android:layout_width="410dp"
         android:layout_height="147dp"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:srcCompat="@drawable/logoreel"
-        android:padding="30dp"/>
+        android:src="@drawable/logoreel"
+        android:padding="30dp"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageView10"
