--- a/cinema/app/src/main/res/layout/fragment_cines.xml
+++ b/cinema/app/src/main/res/layout/fragment_cines.xml
@@ -11,46 +11,67 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left">
+        android:layout_gravity="left"
+        android:background="@color/almostblack">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cines">
+            android:text="Cines"
+            android:textSize="40sp"
+            android:layout_marginLeft="32dp"
+            android:textStyle="bold"
+            android:textColor="@color/almostwhite">
 
         </TextView>
     </RelativeLayout>
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:columnCount="3"
         android:rowCount="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/almostblack"
+        >
 
+        <ImageButton
+            android:id="@+id/boton"
+            android:layout_width="232dp"
+            android:layout_height="43dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/editTextGray"
+            android:text="Cd. Obregón, Sonora, Méx."
+            android:textColor="@color/white"
+            android:textFontWeight="400"
+            android:textSize="11sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="14dp"
+            android:text="Cd. Obregón, Sonora, Mex."
+            android:textColor="@color/white"
+            android:textSize="12sp" />
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/ubicacion_36x36" />
-
-        <Button
-            android:id="@+id/btn_cineEscogido"
-            android:layout_width="180dp"
-            android:layout_height="60dp"
-            android:layout_column="0"
-            android:text="Cine Obregón"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/roundedbutton"
-            android:backgroundTint="@color/editTextGray"
-            android:textColor="@color/almostwhite"/>
 
         <ImageButton
             android:id="@+id/buscar"
             android:layout_width="38dp"
             android:layout_height="35dp"
+            android:layout_row="0"
+            android:layout_column="1"
             android:layout_marginLeft="29dp"
             android:background="@color/Banner"
             android:src="@drawable/busqueda_36x36"
@@ -60,6 +81,8 @@
             android:id="@+id/imagen"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_row="0"
+            android:layout_column="2"
             android:layout_marginLeft="15dp"
             android:background="@color/Banner"
             android:src="@drawable/filtros_36x36"
@@ -69,9 +92,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/roundedblackbutton">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -80,29 +104,15 @@
                         android:layout_marginVertical="15dp"
                         android:orientation="horizontal">
                         <ImageView
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:background="#1459AB"/>
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:src="@drawable/cinema"/>
                         <GridLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:rowCount="4"
-                            android:columnCount="2">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Dirección"
-                                android:textColor="@color/white"
-                                android:layout_column="0"
-                                android:layout_row="0"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Tipo de Sala"
-                                android:textColor="@color/white"
-                                android:layout_column="0"
-                                android:layout_row="1"/>
+                            android:columnCount="2"
+                            android:layout_marginLeft="7dp">
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -110,27 +120,82 @@
                                 android:text="Cinépolis Bella Vista"
                                 android:textColor="@color/white"
                                 android:layout_column="0"
-                                android:layout_row="2"/>
-
-                            <RatingBar
-                                android:id="@+id/ratingbar"
-                                android:layout_width="129dp"
-                                android:layout_height="31dp"
-                                android:layout_row="3"
-                                android:layout_column="0"
-                                android:layout_gravity="left"
-                                android:numStars="5"
-                                android:progressTint="@color/yellow"
-                                android:scaleX="0.5"
-                                android:scaleY="0.5"
+                                android:layout_row="0"
+                                android:textStyle="bold"
                                 />
 
-                            <ImageButton
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Blvd. Rodolfo Elías Calles"
+                                android:textColor="@color/white"
+                                android:layout_column="0"
+                                android:layout_row="1"
+                                android:layout_marginTop="3dp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="2D, 3D, Sala Junior"
+                                android:textColor="@color/white"
+                                android:layout_column="0"
+                                android:layout_row="2"
+                                android:layout_marginTop="3dp"/>
+
+                            <RatingBar
+                                android:layout_gravity="center_horizontal"
+                                android:id="@+id/ratingbar"
+                                style="?android:attr/ratingBarStyleSmall"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_row="3"
-                                android:layout_column="1"
+                                android:layout_column="0"
+                                android:progressTint="@color/yellow"
+                                android:max="5"
+                                android:numStars="5"
+                                android:isIndicator="true"
+                                android:transformPivotX="0dp"
+                                android:layout_marginTop="3dp"
+                                android:transformPivotY="0dp"
+                                android:rating="4.5"
                                 />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Ver Calificaciones"
+                                android:textColor="@color/white"
+                                android:layout_column="0"
+                                android:layout_row="3"
+                                android:padding="4dp"
+                                android:textSize="11dp"
+                                android:layout_marginTop="13dp"
+                                android:layout_gravity="center"
+                                android:textStyle="bold"/>
+
+                            <ImageButton
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:src="@drawable/menu_36x36"
+                                android:layout_row="3"
+                                android:layout_column="1"
+                                android:layout_marginTop="-10dp"
+                                android:layout_gravity="center_horizontal"
+                                android:padding="5dp"
+                                />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Menú"
+                                android:textColor="@color/white"
+                                android:layout_column="1"
+                                android:layout_row="3"
+                                android:padding="4dp"
+                                android:textSize="11dp"
+                                android:layout_marginTop="13dp"
+                                android:layout_gravity="center"
+                                android:textStyle="bold"/>
+
+
                         </GridLayout>
                         </LinearLayout>
                     </LinearLayout>
