--- a/cinema/app/src/main/res/layout/fragment_cines.xml
+++ b/cinema/app/src/main/res/layout/fragment_cines.xml
@@ -65,21 +65,6 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/ubicacion_36x36" />
-
-<<<<<<< HEAD
-=======
-        <Button
-            android:id="@+id/btn_ubicacion"
-            android:layout_width="180dp"
-            android:layout_height="60dp"
-            android:layout_column="0"
-            android:text="Cine Obregón"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/roundedbutton"
-            android:backgroundTint="@color/editTextGray"
-            android:textColor="@color/almostwhite"/>
-
->>>>>>> f59b4bd8fdd96f4421e69e8d02de78467b263f39
         <ImageButton
             android:id="@+id/buscar"
             android:layout_width="38dp"
@@ -102,17 +87,14 @@
             android:src="@drawable/filtros_36x36"
             />
     </GridLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/roundedblackbutton">
+                android:layout_margin="15dp"
+                android:background="@drawable/squaregraybox">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="45dp"
                         android:layout_marginVertical="15dp"
@@ -187,8 +169,8 @@
                                 android:textStyle="bold"/>
 
                             <ImageButton
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
                                 android:src="@drawable/menu_36x36"
                                 android:layout_row="3"
                                 android:layout_column="1"
@@ -204,7 +186,7 @@
                                 android:layout_column="1"
                                 android:layout_row="3"
                                 android:padding="4dp"
-                                android:textSize="11dp"
+                                android:textSize="8sp"
                                 android:layout_marginTop="13dp"
                                 android:layout_gravity="center"
                                 android:textStyle="bold"/>
@@ -213,6 +195,114 @@
                         </GridLayout>
                         </LinearLayout>
                     </LinearLayout>
-    </ScrollView>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@drawable/squaregraybox">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="45dp"
+            android:layout_marginVertical="15dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/cinema"/>
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:rowCount="4"
+                android:columnCount="2"
+                android:layout_marginLeft="7dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cinépolis Sendero"
+                    android:textColor="@color/white"
+                    android:layout_column="0"
+                    android:layout_row="0"
+                    android:textStyle="bold"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Plaza Sendero, Cd. Obreg"
+                    android:textColor="@color/white"
+                    android:layout_column="0"
+                    android:layout_row="1"
+                    android:layout_marginTop="3dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2D, 3D, Sala Junior"
+                    android:textColor="@color/white"
+                    android:layout_column="0"
+                    android:layout_row="2"
+                    android:layout_marginTop="3dp"/>
+
+                <RatingBar
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/ratingbar2"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="3"
+                    android:layout_column="0"
+                    android:progressTint="@color/yellow"
+                    android:max="5"
+                    android:numStars="5"
+                    android:isIndicator="true"
+                    android:transformPivotX="0dp"
+                    android:layout_marginTop="3dp"
+                    android:transformPivotY="0dp"
+                    android:rating="4.5"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ver Calificaciones"
+                    android:textColor="@color/white"
+                    android:layout_column="0"
+                    android:layout_row="3"
+                    android:padding="4dp"
+                    android:textSize="11dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"/>
+
+                <ImageButton
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/menu_36x36"
+                    android:layout_row="3"
+                    android:layout_column="1"
+                    android:layout_marginTop="-10dp"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="5dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Menú"
+                    android:textColor="@color/white"
+                    android:layout_column="1"
+                    android:layout_row="3"
+                    android:padding="4dp"
+                    android:textSize="8sp"
+                    android:layout_marginTop="13dp"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"/>
+
+
+            </GridLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+        </LinearLayout>
