--- a/cinema/app/src/main/res/drawable/squaregraybox.xml
+++ b/cinema/app/src/main/res/drawable/squaregraybox.xml
@@ -9,7 +9,7 @@
     </item>
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/grayBackground"/>
+            <solid android:color="@color/Banner"/>
 
             <stroke android:color="@color/editTextGray" android:width="1dp"/>
         </shape>
