--- a/cinema/app/src/main/res/layout/fragment_perfil.xml
+++ b/cinema/app/src/main/res/layout/fragment_perfil.xml
@@ -39,6 +39,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="168dp"
+            android:src="@drawable/group64"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="150dp"
