--- a/cinema/app/src/main/res/layout/activity_registrarse.xml
+++ b/cinema/app/src/main/res/layout/activity_registrarse.xml
@@ -84,7 +84,7 @@
         android:layout_width="127dp"
         android:layout_height="26dp"
         android:layout_marginTop="28dp"
-        android:text="Repetir Contraseña"
+        android:text="Contraseña"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
@@ -94,7 +94,7 @@
         android:layout_width="127dp"
         android:layout_height="26dp"
         android:layout_marginTop="28dp"
-        android:text="Contraseña"
+        android:text="Repetir Contraseña"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
@@ -116,6 +116,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/roundedittext"
         android:ems="10"
+        android:padding="3dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -128,8 +129,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:ems="10"
+        android:padding="3dp"
         android:background="@drawable/roundedittext"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -142,7 +144,8 @@
         android:background="@drawable/roundedittext"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:padding="3dp"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,6 +158,7 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/roundedittext"
         android:ems="10"
+        android:padding="3dp"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
