--- a/cinema/app/src/main/res/layout/detalles_pelicula.xml
+++ b/cinema/app/src/main/res/layout/detalles_pelicula.xml
@@ -35,59 +35,64 @@
         android:verticalSpacing="10dp"/>
 
     <ImageButton
-        android:layout_width="38dp"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="134dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginHorizontal="197dp"
         android:background="@color/Fondo"
         android:layout_marginTop="29dp"
+        android:scaleType="centerInside"
         android:src="@drawable/agregar_a_lista_36x36" />
 
     <ImageButton
-        android:layout_width="38dp"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="182dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:scaleType="centerInside"
+        android:layout_marginHorizontal="232dp"
         android:background="@color/Fondo"
-        android:layout_marginTop="-40dp"
+        android:layout_marginTop="-31dp"
         android:src="@drawable/por_ver_off_36x36" />
 
     <ImageButton
-        android:layout_width="38dp"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="232dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginHorizontal="268dp"
+        android:scaleType="centerInside"
         android:background="@color/Fondo"
-        android:layout_marginTop="-39dp"
+        android:layout_marginTop="-31dp"
         android:src="@drawable/vista_off_36x36" />
 
     <ImageButton
-        android:layout_width="38dp"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="282dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:scaleType="centerInside"
+        android:layout_marginHorizontal="302dp"
         android:background="@color/Fondo"
-        android:layout_marginTop="-40dp"
+        android:layout_marginTop="-30dp"
         android:src="@drawable/favorita_off_36x36" />
 
     <ImageButton
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:scaleType="centerInside"
         android:layout_marginLeft="5dp"
         android:background="@color/Fondo"
-        android:layout_marginTop="-41dp"
-        android:layout_marginHorizontal="330dp"
+        android:layout_marginTop="-31dp"
+        android:layout_marginHorizontal="336dp"
         android:src="@drawable/compartir_36x36"
         />
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="190dp"
+        android:layout_width="150dp"
+        android:layout_height="240dp"
         android:id="@+id/imagen"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="15dp"
         android:scaleType="fitXY"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-180dp"
+        android:layout_marginTop="-230dp"
         android:layout_marginLeft="190dp"
         android:textColor="@color/white"
         android:textSize="22sp"
@@ -97,7 +102,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="8sp"
+        android:textSize="16sp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="190dp"
         android:background="@color/white"
@@ -109,9 +114,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="8sp"
-        android:layout_marginTop="-19dp"
-        android:layout_marginLeft="210dp"
+        android:textSize="16sp"
+        android:layout_marginTop="-30dp"
+        android:layout_marginLeft="216dp"
         android:background="@color/white"
         android:fontFamily="sans-serif-black"
         android:padding="4dp"
@@ -121,9 +126,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="8sp"
-        android:layout_marginTop="-19dp"
-        android:layout_marginLeft="237dp"
+        android:textSize="16sp"
+        android:layout_marginTop="-30dp"
+        android:layout_marginLeft="258dp"
         android:background="@color/white"
         android:fontFamily="sans-serif-black"
         android:padding="4dp"
@@ -210,13 +215,13 @@
         android:layout_width="wrap_content"
         android:layout_height="474dp"
         android:orientation="vertical"
-        android:layout_marginTop="1dp">
+        android:layout_marginTop="0dp">
 
         <TextView
-            android:layout_width="390dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="Calificación Media de los Usuarios."
@@ -233,15 +238,15 @@
             android:layout_marginTop="-10dp"
             android:numStars="5"
             android:progressTint="@color/yellow"
-            android:scaleX="0.6"
-            android:scaleY="0.6"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
             android:stepSize="0.5" />
 
         <TextView
             android:layout_width="90dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="Trailer"
