--- a/cinema/app/src/main/res/layout/fragment_cartelera.xml
+++ b/cinema/app/src/main/res/layout/fragment_cartelera.xml
@@ -49,27 +49,29 @@
                 android:layout_marginTop="3dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Cd. Obregón, Sonora, Mex."
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
 
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/buscar"
-            android:layout_width="38dp"
-            android:layout_height="35dp"
-            android:layout_marginLeft="29dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="40dp"
             android:background="@color/Banner"
-            android:layout_marginVertical="70dp"
+            android:scaleType="centerInside"
+            android:layout_marginVertical="78dp"
             android:src="@drawable/busqueda_36x36"
             />
 
         <ImageButton
             android:id="@+id/imagen"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginLeft="5dp"
+            android:scaleType="centerInside"
             android:background="@color/Banner"
-            android:layout_marginVertical="70dp"
+            android:layout_marginVertical="78dp"
             android:src="@drawable/filtros_36x36"
             />
     </LinearLayout>
