--- a/cinema/app/src/main/res/layout/activity_rating_pelicula.xml
+++ b/cinema/app/src/main/res/layout/activity_rating_pelicula.xml
@@ -28,7 +28,7 @@
     <GridView
         android:id="@+id/gridView"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:numColumns="3"
         android:columnWidth="100dp"
         android:horizontalSpacing="10dp"
@@ -42,7 +42,8 @@
         <ListView
             android:id="@+id/lista"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:dividerHeight="15dp"/>
     </ScrollView>
 
